[package]
name = "prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking"] }
bevy_egui = "0.33"
bitflags = "1.3.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

